crates/cpg-schema/tests/snapshots/contracts__parameter_semantics.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table parameter_semantics
family signatures
key snapshot_id, module_node_id, function_key, signature_index, ordinal, fact_id
check signature_index_nonnegative: signature_index >= 0
@lctx.family=signatures
@lctx.table=parameter_semantics
snapshot_id: FixedSizeBinary(16) NOT NULL
fact_id: FixedSizeBinary(16) NOT NULL
module_node_id: FixedSizeBinary(16) NOT NULL
module_name: Utf8 NOT NULL
function_key: Utf8 NOT NULL
signature_index: Int64 NOT NULL
form: Int16 NOT NULL [lctx.codebook=signature_form]
ordinal: Int64 NULL
kind: Int16 NULL [lctx.codebook=parameter_kind]
name: Utf8 NULL
required: Boolean NULL
annotation: Utf8 NULL
annotation_classes: List(non-null Utf8) NOT NULL
annotation_classes_exhaustive: Boolean NULL
annotation_scalar: List(non-null Utf8) NOT NULL
