crates/cpg-schema/tests/snapshots/contracts__parameter_syntax.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table parameter_syntax
family signatures
key snapshot_id, function_node_id, ordinal, fact_id
check span_order: start_byte >= 0 AND end_byte >= start_byte
check ordinal_nonnegative: ordinal >= 0
@lctx.family=signatures
@lctx.table=parameter_syntax
snapshot_id: FixedSizeBinary(16) NOT NULL
fact_id: FixedSizeBinary(16) NOT NULL
node_id: FixedSizeBinary(16) NOT NULL
function_node_id: FixedSizeBinary(16) NOT NULL
ordinal: Int64 NOT NULL
name: Utf8 NOT NULL
kind: Int16 NOT NULL [lctx.codebook=parameter_kind]
default_text: Utf8 NULL
default_start_byte: Int64 NULL
default_end_byte: Int64 NULL
annotation_text: Utf8 NULL
start_byte: Int64 NOT NULL
end_byte: Int64 NOT NULL
