crates/cpg-schema/tests/snapshots/contracts__provider_class_map.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table provider_class_map
family signatures
key snapshot_id, module_node_id, class_key
@lctx.family=signatures
@lctx.table=provider_class_map
snapshot_id: FixedSizeBinary(16) NOT NULL
module_node_id: FixedSizeBinary(16) NOT NULL
class_key: Utf8 NOT NULL
node_id: FixedSizeBinary(16) NULL
pysa_fact_id: FixedSizeBinary(16) NOT NULL
declaration_fact_id: FixedSizeBinary(16) NULL
reason: Int16 NULL [lctx.codebook=boundary_reason]
