crates/cpg-schema/tests/snapshots/contracts__pysa_functions.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table pysa_functions
family signatures
key snapshot_id, module_node_id, function_key, fact_id
@lctx.family=signatures
@lctx.table=pysa_functions
snapshot_id: FixedSizeBinary(16) NOT NULL
fact_id: FixedSizeBinary(16) NOT NULL
module_node_id: FixedSizeBinary(16) NOT NULL
module_name: Utf8 NOT NULL
function_key: Utf8 NOT NULL
name: Utf8 NOT NULL
name_start_byte: Int64 NULL
name_end_byte: Int64 NULL
is_overload: Boolean NOT NULL
is_staticmethod: Boolean NOT NULL
is_classmethod: Boolean NOT NULL
is_property_getter: Boolean NOT NULL
is_property_setter: Boolean NOT NULL
is_stub: Boolean NOT NULL
is_def_statement: Boolean NOT NULL
defining_class: Utf8 NULL
overridden_base: Utf8 NULL
signature_count: Int64 NOT NULL
